--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">WizardWorldApp</string>
+    <string name="app_name"></string>
+    <string name="title_home">Houses</string>
+    <string name="title_dashboard">Dashboard</string>
 </resources>
